# SPDX-License-Identifier: MIT
#
# Copyright (c) 2025 libsixel developers. See `AUTHORS`.
#
# Permission is hereby granted, free of charge, to any person obtaining a copy of
# this software and associated documentation files (the "Software"), to deal in
# the Software without restriction, including without limitation the rights to
# use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of
# the Software, and to permit persons to whom the Software is furnished to do so,
# subject to the following conditions:
#
# The above copyright notice and this permission notice shall be included in all
# copies or substantial portions of the Software.
#
# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS
# FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR
# COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER
# IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN
# CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.
#
srcs = [
  'output.c',
  'fromsixel.c',
  'tosixel.c',
  'tosixel-highcolor.c',
  'tosixel-highcolor.h',
  'timer.c',
  'timer.h',
  'sleep.c',
  'sleep.h',
  'palette-heckbert.c',
  'palette-heckbert.h',
  'palette-common-merge.c',
  'palette-common-merge.h',
  'palette-common-snap.c',
  'palette-common-snap.h',
  'palette-kmeans.c',
  'palette-kmeans-assign.c',
  'palette-kmeans-build.c',
  'palette-kmeans.h',
  'palette-kmeans-assign.h',
  'palette-kmeans-build.h',
  'palette-kmedoids.c',
  'palette-kmedoids.h',
  'palette-kcenter.c',
  'palette-kcenter.h',
  'palette.c',
  'lookup-policy.c',
  'lookup-policy-normal.c',
  'lookup-policy-mono-darkbg.c',
  'lookup-policy-mono-lightbg.c',
  'lookup-policy-certlut.c',
  'lookup-policy-5bit.c',
  'lookup-policy-6bit.c',
  'lookup-policy-eytzinger.c',
  'lookup-policy-fhedt.c',
  'lookup-policy-vptree.c',
  'lookup-policy-rbc.c',
  'lookup-policy-mahalanobis.c',
  'factory.c',
  'classid-lookup-policy.h',
  'classid-dither-policy.h',
  'components.c',
  'lookup-fhedt-8bit.c',
  'lookup-fhedt-float32.c',
  'lookup-vptree-8bit.c',
  'lookup-vptree-float32.c',
  'dither.c',
  'dither-policy.c',
  'dither-policy-backend.c',
  'dither-policy-backend-fixed.c',
  'dither-policy-backend-varcoeff.c',
  'dither-policy-backend-positional.c',
  'dither-policy-none.c',
  'dither-policy-fs.c',
  'dither-policy-atkinson.c',
  'dither-policy-jajuni.c',
  'dither-policy-stucki.c',
  'dither-policy-burkes.c',
  'dither-policy-sierra1.c',
  'dither-policy-sierra2.c',
  'dither-policy-sierra3.c',
  'dither-policy-a-dither.c',
  'dither-policy-x-dither.c',
  'dither-policy-bluenoise.c',
  'dither-policy-interframe.c',
  'dither-policy-lso2.c',
  'dither-common-pipeline.c',
  'dither-positional-8bit.c',
  'dither-positional-float32.c',
  'dither-fixed-8bit.c',
  'dither-fixed-float32.c',
  'dither-varcoeff-8bit.c',
  'dither-varcoeff-float32.c',
  'logger.c',
  'logger.h',
  'colorspace.c',
  'frame.c',
  'cpu.c',
  'cpu.h',
  'pixelformat.c',
  'filter-colors.c',
  'filter-colors.h',
  'filter-load.c',
  'filter-load.h',
  'filter-factory.c',
  'filter-factory.h',
  'filter-final-merge.c',
  'filter-final-merge.h',
  'filter-dither.c',
  'filter-dither.h',
  'filter-gradient.c',
  'filter-gradient.h',
  'filter-encode.c',
  'filter-encode.h',
  'filter-lookup.c',
  'filter-lookup.h',
  'filter-palette.c',
  'filter-palette.h',
  'filter-fhedt.c',
  'filter-fhedt.h',
  'filter-vptree.c',
  'filter-vptree.h',
  'filter-eytzinger.c',
  'filter-eytzinger.h',
  'filter-clip.c',
  'filter-clip.h',
  'filter-resize.c',
  'filter-resize.h',
  'filter-sample.c',
  'filter-sample.h',
  'filter.c',
  'filter.h',
  'scale.c',
  'scale.h',
  'chunk.c',
  'cms.c',
  'cms.h',
  'icc-parse.c',
  'icc-parse.h',
  'icc-apply.c',
  'icc-apply.h',
  'loader.c',
  'loader-gdk-pixbuf2.c',
  'loader-gnome-thumbnailer.c',
  'loader-coregraphics.c',
  'loader-quicklook.c',
  'loader-wic.c',
  'loader-gd.c',
  'loader-libpng.c',
  'loader-libtiff.c',
  'loader-librsvg.c',
  'loader-libjpeg.c',
  'loader-libwebp.c',
  'loader-builtin.c',
  'loader-common.c',
  'loader-chain.c',
  'loader-factory.c',
  'loader-order-schema.c',
  'loader-manager.c',
  'loader-component.c',
  'loader-registry.c',
  'loader-component.h',
  'loader-chain.h',
  'loader-factory.h',
  'loader-order-schema.h',
  'loader-manager.h',
  'frompnm.c',
  'frompng.c',
  'frompng.h',
  'fromhdr.c',
  'fromhdr.h',
  'frompsd.c',
  'frompsd.h',
  'fromgif.c',
  'fromwebp.c',
  'fromwebp.h',
  'fromwebp-internal.h',
  'fromwebp-vp8-private.h',
  'fromwebp-vp8-native-internal.h',
  'fromwebp-vp8-tables.h',
  'fromwebp-container.c',
  'fromwebp-vp8.c',
  'fromwebp-vp8-alpha.c',
  'fromwebp-vp8-parse.c',
  'fromwebp-vp8-native.c',
  'fromwebp-vp8-native-token.c',
  'fromwebp-vp8l.c',
  'fromwebp-trace.c',
  'frombmp-parser.c',
  'frombmp.c',
  'frombmp.h',
  'frombmp-internal.h',
  'clipboard.c',
  'encoder.c',
  'mapfile.c',
  'mapfile.h',
  'drcs.c',
  'drcs.h',
  'planner.c',
  'planner.h',
  'decoder.c',
  'decoder-parallel.c',
  'decoder-parallel.h',
  'decoder-image.h',
  'options.c',
  'path.c',
  'writer.c',
  'stb_image_write.c',
  'status.c',
  'compat_stub.c',
  'malloc_stub.c',
  'allocator.c',
  'tty.c',
  'threading.c',
  'threading.h',
  'probe.c',
  'probe.h',
  'sixel_decode_rgba.c',
  'sixel_decode_rgba.h',
  'sixel_atomic_fallback.c',
  'lookup-policy.h',
  'lookup-policy-normal.h',
  'lookup-policy-mono-darkbg.h',
  'lookup-policy-mono-lightbg.h',
  'lookup-policy-certlut.h',
  'lookup-policy-5bit.h',
  'lookup-policy-6bit.h',
  'lookup-policy-eytzinger.h',
  'lookup-policy-fhedt.h',
  'lookup-policy-vptree.h',
  'lookup-policy-rbc.h',
  'lookup-policy-mahalanobis.h',
  'factory.h',
  'components.h',
  'lookup-fhedt-8bit.h',
  'lookup-fhedt-float32.h',
  'lookup-vptree-8bit.h',
  'lookup-vptree-float32.h',
  'dither-positional-8bit.h',
  'dither-positional-float32.h',
  'dither-fixed-8bit.h',
  'dither-interframe-method.c',
  'dither-interframe-method.h',
  'dither-interframe-stbn-source.c',
  'dither-interframe-stbn-source.h',
  'dither-interframe-stbn-source-hash.c',
  'dither-interframe-stbn-source-hash.h',
  'dither-interframe-stbn-source-mask.c',
  'dither-interframe-stbn-source-mask.h',
  'dither-interframe-stbn-source-mask-table.c',
  'dither-interframe-stbn-source-mask-table.h',
  'dither-interframe-stbn-source-pmj.c',
  'dither-interframe-stbn-source-pmj.h',
  'dither-fixed-float32.h',
  'dither-internal.h',
  'dither-varcoeff-8bit.h',
  'dither-varcoeff-float32.h',
  'dither-policy.h',
  'dither-policy-backend.h',
  'dither-policy-none.h',
  'dither-policy-fs.h',
  'dither-policy-atkinson.h',
  'dither-policy-jajuni.h',
  'dither-policy-stucki.h',
  'dither-policy-burkes.h',
  'dither-policy-sierra1.h',
  'dither-policy-sierra2.h',
  'dither-policy-sierra3.h',
  'dither-policy-lso2.h',
  'dither-policy-a-dither.h',
  'dither-policy-x-dither.h',
  'dither-policy-bluenoise.h',
  'dither-policy-interframe.h',
  'options.h',
  'path.h',
  'sixel_atomic.h',
]

if conf.get('SIXEL_ENABLE_THREADS', 0) == 1
  srcs += [
    'threadpool.c',
  ]
endif

if have_quicklook_thumbnailing
  srcs += ['quicklook_thumbnailing.m']
endif

if have_clipboard_macos
  if conf.get('HAVE_APPKIT', 0) == 1
    srcs += ['clipboard_macos.m']
  else
    srcs += ['clipboard_carbon.c']
  endif
endif

lt_soversion = ls_lt_current - ls_lt_age
lt_version = '@0@.@1@.@2@'.format(lt_soversion, ls_lt_age, ls_lt_revision)

if amalgamated_lib_enabled
  libsixel_sources = [amalgamation_out]
else
  libsixel_sources = srcs
endif
libsixel_build_deps = deps + msvc_pgo_post_wic_deps

libsixel = library('sixel',
                   libsixel_sources,
                   include_directories: project_inc,
                   c_args: libsixel_posix_defs,
                   objc_args: libsixel_posix_defs,
                   dependencies: libsixel_build_deps,
                   version: lt_version,
                   soversion: lt_soversion.to_string(),
                   install: true)

libsixel_dep = declare_dependency(link_with: libsixel,
                                  include_directories: project_inc,
                                  dependencies: libsixel_build_deps)

# Export the library target for other subdirectories (e.g. wheel builds).
set_variable('libsixel_library', libsixel)

# vim: set et ts=2:
